examples/test/testpolicy6377.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6377
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key29: value28
      key42: value1
      key24: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value20
      podSelector:
        matchLabels:
          key27: value29
